# sensehat-dsp

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uv.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
.github/workflows/: python-release.yml
app/: main.py  models.py
docker/api/: Dockerfile
docker/core/: Dockerfile
docker/jupyter/: entrypoint.sh
notebooks/01-image-test/: 01-image-test.ipynb
notebooks/01-sense-hat/: 01-sense-hat.ipynb  01-sensehat-dsp.ipynb
notebooks/02-pixoo-test/: 01-pixoo-test.ipynb
notebooks/02-print-images/: 01-print-images.ipynb
resources/dsp-images/: dsp-images.json
sensehat_dsp/api/: api.py  app.py
sensehat_dsp/api/routers/: clear_display.py  clear_image.py  color_cycle.py  intermittent_image.py  meta.py  set_image.py  slow_intermittent_image.py  utils.py
sensehat_dsp/display/: __init__.py  display.py  dsp_images.py
sensehat_dsp/gol/: gol.py
src/sensehat_dsp/: setup.py
src/sensehat_dsp/display/: __init__.py  display.py  dsp_images.py  utils.py
src/sensehat_dsp/gol/: __init__.py
src/sensehat_dsp/sensehat_dps/display/: __init__.py  display.py  utils.py
src/sensehat_dsp/sensehat_dsp/app/: aann_manager.py  main.py
src/sensehat_dsp/sensehat_dsp/display/: __init__.py  display.py  dsp_images.py  utils.py
src/sensehat_dsp/sensehat_dsp/logger/: logger.py
src/sensehat_dsp/sensehat_dsp/meta/: data_models.py
src/sensehat_dsp/sensehat_dsp/pixoo_client/: __init__.py  base_images.py  image.py  (+1 more)
(+1 files in other folders)
